        - Improvement of NKJP-annotation helper. (diewald)
        - Add redirect-uri to client view. (diewald)
        - Added german translation for Cosmas-II. (hebasta)
        - Workaround for failing utf8 test in some
          environments (fixes #197). (diewald)
        - Require at least conllu2korapxml v0.6.1. (diewald)
        - Improve redirection on all authorization calls. (diewald)

0.49 2023-02-23
        - Introduce conllu2korapxml command via plugin. (diewald)
        - Introduce korapxml2conllu command via plugin. (diewald)
        - Do not follow redirect links on OAuth authorization
          requests. (diewald)

0.48 2023-01-12
        - Added support for NKJP tagset in annotation
          assistant. (diewald)
        - Remove deprecated 'auth_support' (since 0.31)
          configuration parameter - use 'Auth' plugin instead. (diewald)
        - Support environment variable KALAMAR_CLIENT_FILE for
          client information. (diewald)
        - Support KALAMAR_PLUGINS as a comma-separated environment
          variable to load plugins in addition to the 'plugins'
          parameter in the configuration file. (diewald)
        - Allow popups in plugin widgets. (diewald)
        - Set version via KALAMAR_VERSION environment variable.
          (diewald)
        - Add panel types. (diewald)
        - Add textSigle as a plugin receivable information. (diewald)
        - Introduce krill-indexer command via plugin. (diewald)
        - Introduce start-with-backend command via plugin. (diewald)
        - Update Mojolicious for security reasons. (diewald)
        - Fix terser installation (fixes #182). (diewald)
        - Replaced list with info API request for client information
          in OAuth registration flow. (diewald)
        - Fix tour localization to be overwritable. (diewald)
        - Make scope a requirement for OAuth authorizations.
          (diewald)
        - Improve security of OAuth redirects. (diewald)